--- a/jsconfig.json
+++ b/jsconfig.json
@@ -11,10 +11,9 @@
     "jsx": "react-jsx",
     "jsxImportSource": "preact",
     "skipLibCheck": true,
+    "baseUrl": ".",
     "paths": {
-      //   "src/*": ["./src/*"],
-      //   "@components/*": ["./src/components/*"],
-      //   "@utils/*": ["./src/utils/*"],
+      "@/*": ["./src/*"],
       "react": ["./node_modules/preact/compat/"],
       "react-dom": ["./node_modules/preact/compat/"]
     }
